--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!--<head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<app-ui-test-card></app-ui-test-card>
+
+<app-test-services></app-test-services>
+
+<app-test-observables></app-test-observables>
+
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -16,6 +27,22 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul>-->
+
+<button mat-button [matMenuTriggerFor]="show">What you like to see?</button>
+
+<mat-menu #show="matMenu">
+  <a mat-menu-item routerLink="/categories">Categories</a>
+  <a mat-menu-item routerLink="/countries">Countries</a>
+  <a mat-menu-item routerLink="/actors">Actors</a>
+  <a mat-menu-item routerLink="/movies">Movies</a>
+  <a mat-menu-item routerLink="/tmdb-movies">Top Rated Movies</a>
+</mat-menu>
+
+  
 
 <router-outlet></router-outlet>
+
+
+
+
